GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemptionItem__x/SalesforceIRedeemRedemptionItem__x.object-meta.xml
<CustomObject>
    <description>SalesforceIRedeemRedemptionItem</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceIRedeemRedemptionItem</externalName>
    <label>SalesforceIRedeemRedemptionItem</label>
    <pluralLabel>SalesforceIRedeemRedemptionItem</pluralLabel>
</CustomObject>