GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemptionItem__x/fields/CashCurrencyAmount__c.field-meta.xml
<CustomField>
    <fullName>CashCurrencyAmount__c</fullName>
    <description>CashCurrencyAmount</description>
    <externalDeveloperName>CashCurrencyAmount</externalDeveloperName>
    <label>CashCurrencyAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>