GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemptionItem__x/fields/IsPhysical__c.field-meta.xml
<CustomField>
    <fullName>IsPhysical__c</fullName>
    <description>IsPhysical</description>
    <externalDeveloperName>IsPhysical</externalDeveloperName>
    <label>IsPhysical</label>
    <length>128</length>
    <type>Text</type>
</CustomField>