GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemptionItem__x/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description>ItemId</description>
    <externalDeveloperName>ItemId</externalDeveloperName>
    <label>ItemId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>