GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemptionItem__x/fields/RedemptionId__c.field-meta.xml
<CustomField>
    <fullName>RedemptionId__c</fullName>
    <description>RedemptionId</description>
    <externalDeveloperName>RedemptionId</externalDeveloperName>
    <label>RedemptionId</label>
    <length>128</length>
    <referenceTo>SalesforceIRedeemRedemption__x</referenceTo>
    <relationshipLabel>SalesforceIRedeemRedemptionItem</relationshipLabel>
    <relationshipName>SalesforceIRedeemRedemptionItem</relationshipName>
    <type>ExternalLookup</type>
</CustomField>